@@ -37,12 +37,12 @@ The whole comment line is ignored completely. Empty lines are ignored as well.
 .P
 The following example demostrates the use of comments:
 .Vb
-\&	<C T="[1]" TL="2" V="2">
-\&		<I T="[1]" TL="2" V="Indefinite">
-\&		\fB--\fR </I>
+\&	<C O="0" T="[1]" TL="2" V="2">
+\&		<I O="2" T="[1]" TL="2" V="Indefinite">
+\&		\fB--\fR </I O="4" T="[UNIVERSAL 0]" L="4">
 \&		\fB#\fR Do not terminate:
 \&		\fB#\fR the absence of end-of-content octets is intentional!
-\&	</C>
+\&	</C O="6" T="[1]" L="6">
 .Ve
 .SH SEE ALSO
 .TP
